Update and rename copy_brimore_your_module.yml to copy_your_custom_module.yml

--- a/plays/copy_your_custom_module.yml
+++ b/plays/copy_your_custom_module.yml
@@ -16,4 +16,4 @@
     command: chown -R {{ hostname }}:odoo /opt/odoo{{ version }}/projects/{{ hostname }}/
 
   tags:
-  - copy_brimore_custom_module
+  - copy_your_custom_module
